# Payload-2025-2026

./: .gitignore  LICENSE  README.md  Soil_Data.csv  Soil_Data_Test_Log.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: run_ruff.yml
Alternate Code/: main.py
Alternate Code/src/imu_logger/: state.py
Old Code/: Firm_analysis.py  importCSV.py  importwFIRM.py
payload/: constants.py  context.py  firm.py  grave.py  importwFIRM.py  main.py  state.py  subscaleFlight.py  utils.py  zombie.py
payload/base_classes/: base_grave.py  base_zombie.py
payload/data_handling/: logger.py
payload/data_handling/packets/: context_data_packet.py  firm_data_packet.py  grave_data_packet.py  logger_data_packet.py  servo_data_packet.py  zombie_data_packet.py
payload/hardware/: .grave.py.swp  .latch_driver.py.swo  .latch_driver.py.swp  firm.py  grave.py  latch_driver.py  lead_screw_driver.py  soil_sensor.py  zombie.py
payload/mock/: display.py  mock_firm.py  mock_grave.py  mock_logger.py  mock_zombie.py
scripts/: auger_initializer.py  firm_test.py  latch_test.py  leg_test.py  mock_grave_test.py  planetary_test.py  real_grave_test.py  real_zombie_test.py  reboot_firm.py  run_auger.py  run_bottom_test.py  run_cam.sh  run_firm_uart.py  run_grave_test.py  run_latch.py  run_lead_screw_motor.py  run_lead_screw_test.py  run_mag_calibration.py  run_planetary_motor.py  run_servo.py  run_servo_5_turns.py  run_soilsensor.py  run_stepper_legs.py  run_stepper_motor.py  run_zombie_servo.py
src/imu_logger/: state.py
