[project]
name = "Payload-2025-2026"
requires-python = ">=3.14, <3.15"
version = "0.1"
readme = "README.md"
dependencies = [
    "firm-client"
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov",
    "ruff>=0.12.12",
    "pre-commit",
    "ty>=0.0.1a20",
]

# UV:
[tool.uv]
python-preference = "only-managed"

# RUFF:
[tool.ruff]
line-length = 100
target-version = "py314"
show-fixes = true
exclude = ["scripts"]

[tool.ruff.lint]
# Some of the ones prefixed with a d should probably not be ignored, but that can be fixed later.
ignore = ["PLR2004", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PERF203", "ISC001", "S311",
    "D102", "D103", "D104", "D107", "D205", "D401", "D200"]
select = ["E", "F", "I", "PL", "UP", "RUF", "PTH", "C4", "B", "PIE", "SIM", "RET", "RSE",
    "G", "ISC", "PT", "ASYNC", "TCH", "SLOT", "PERF", "PYI", "FLY", "AIR", "Q", "INP",
    "W", "YTT", "DTZ", "ARG", "T20", "FURB", "D100", "D101", "D300", "D418",
    "D419", "S", "NPY", "D", "D213"]


[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ty.environment]
root = ["./payload"]

[tool.ty.src]
exclude = ["tests", "scripts"]
